--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -150,7 +150,7 @@ const featuredProjects = projects
       </div>
       <div class="content-list">
         {
-          sortedExperiences.slice(0, 5).map((exp) => (
+          sortedExperiences.map((exp) => (
             <article>
               <div class="title-row">
                 <div class="company-info">
