--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,7 +7,7 @@ import Container from '@/components/ui/Container.astro';
 import ContentList from '@/components/shared/ContentList.astro';
 
 const posts = await getCollection('projects', ({ data }) => {
-  return import.meta.env.PROD ? !data.featured : true;
+  return data;
 });
 ---
 
